# sdrtop

./: .gitignore  CREDITS.md  Cargo.toml  LICENSE  Névtelen.md  README.md  build.rs  main.rs  ssh-test.txt
.github/: FUNDING.yml
dev_docs/improvements/: imp-002-observer-mode.md  imp-006-spectrum-analysis-tools.md  imp-007-spectrum-panel-ux-fixes.md
dev_docs/phases/: Phase 11 - HackRF Deep Diagnostics - Log.md  Phase 12a - Theme Foundation - Steps.md  Phase 12b - Panel Visual Updates - Steps.md  Phase 5 - Interactive Controls - Log.md  Phase 6 - Dashboard Engine - Log.md  Phase 6 - Dashboard Engine - Steps.md  Phase 7 - Hardware Health Panels - Steps.md  Phase 8 - FFT Spectrum Analyzer - Log.md  Phase 8a - FFT Pipeline - Steps.md
docs/: CHANGELOG.md  Home.md  Roadmap.md  phase4.md  plan.md
docs/.obsidian/: workspace.json
docs/bugs/: README.md
docs/improvements/: README.md  imp-001-sample-rate-control.md  imp-002-observer-mode-log.md  imp-008-performance-overhaul.md
docs/phases/: Phase 10 - Configuration & Persistence - Log.md  Phase 10 - Configuration & Persistence - Steps.md  Phase 11 - HackRF Deep Diagnostics - Steps.md  Phase 12 - PortaPack Mayhem Integration - Steps.md  Phase 12 - UI UX Polish Theme System - Log.md  Phase 12c - Header Footer Focus - Steps.md  (+6 more)
src/: app.rs  config.rs  event.rs  fft.rs  main.rs  palette.rs  state.rs  tasks.rs  theme.rs
src/app/: builder.rs  input.rs  (+1 more)
user_docs/: README.md  advanced.md  config.md  getting-started.md  hardware.md  keys.md  lab.md  screens.md  themes.md  tips-and-tricks.md  troubleshooting.md  whats-new.md
(+78 files in other folders)
